fixing name and caption overflow

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,5 @@
 .popup__container {
+	position: relative;
 	max-width: 430px;
 	border-radius: 10px;
 	padding: 34px 36px 37px 36px;
