--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 768px) {
 	.profile__add-button {
 		margin-top: 33px;
-		width: calc(100% - 38px);
+		width: 282px;
 	}
 }
 
