--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,15 +1,21 @@
 .profile__edit-button {
+	display: inline-block;
+	align-self: center;
+	margin-top: 3px;
 	width: 24px;
 	height: 24px;
 	border: 1px #fff solid;
 	background-color: #000;
 	box-sizing: border-box;
-	font-size: 0;
-	margin-left: 8px;
-	padding-bottom: 1px;
 	cursor: pointer;
 }
 
 .profile__edit-button:hover {
 	opacity: .6;
+}
+
+@media screen and (max-width: 768px) {
+	.profile__edit-button {
+		transform: scale(0.75);
+	}
 }
