--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,10 +1,9 @@
 .profile__info {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+	display: grid;
+	grid-gap: 5px;
 	margin-top: 1px;
 	margin-left: 30px;
-	grid-gap: 5px;	
+	grid-template-columns: minmax(100px, 100%);
 }
 
 @media screen and (max-width: 768px) {
