--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,17 +1,10 @@
 .profile {
 	margin: 40px auto 51px auto;
-	max-width: 880px;
 	display: grid;
 	grid-template-columns: 120px 1fr 150px;
 	grid-template-rows: 1fr;
 	align-items: center;
-}
-
-@media screen and (max-width: 934px) {
-	.profile {
-		margin-left: 27px;
-		margin-right: 27px;
-	}
+	max-width: 880px;
 }
 
 @media screen and (max-width: 768px) {
